Fix datepicker covered by navbar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -92,7 +92,7 @@ button {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 10;
+    z-index: 2;
     border-bottom: 1px solid #efefef;
 }
 .navbar.transparent {
